[package]
name = "play_phase_display"
version = "0.0.0"
edition = "2021"

[dependencies]
assets = { path = "../../resources/assets", version = "0.0.0" }
display_utils = { path = "../display_utils", version = "0.0.0" }
primitives = { path = "../../data/primitives", version = "0.0.0" }
play_phase_data = { path = "../../data/play_phase_data", version = "0.0.0" }

bevy = "0.13.0"
bevy_mod_picking = "0.18"